rendered/envs/alpha/vmks/ingressroute-vmui-protected.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vmui-protected
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`vmui.zebradil.dev`) || Host(`vmui.junior.zebradil.dev`)
      middlewares:
        - name: chain-authelia-auth
          namespace: authelia
        - name: vmui-alias-redirect
      services:
        - name: vmselect-vmks-long
          port: http
